--- a/Class 2.ipynb
+++ b/Class 2.ipynb
@@ -62,34 +62,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "45559233",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Stack.size() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m stack \u001b[38;5;241m=\u001b[39m Stack()\n\u001b[1;32m      3\u001b[0m string \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mFerr\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m \u001b[43mstack\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msize\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstring\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[0;31mTypeError\u001b[0m: Stack.size() takes 1 positional argument but 2 were given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ref\n"
      ]
     }
    ],
    "source": [
-    "stack = Stack()\n",
+    "def invert(word):\n",
+    "    stack = Stack()\n",
+    "    drow = \"\"\n",
+    "    for char in word:\n",
+    "        stack.push(char)\n",
+    "    while not stack.is_empty():\n",
+    "        drow += stack.pop()\n",
+    "    return drow\n",
     "\n",
-    "string = \"Ferr\"\n",
-    "\n",
-    "stack.size(string)"
+    "print(invert(\"fer\"))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776a3079",
+   "id": "ea4e1c59",
    "metadata": {},
    "outputs": [],
    "source": []
